added 2 new recipes

--- a/recipes/bruschetta.html
+++ b/recipes/bruschetta.html
@@ -1,39 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Bruschetta</title>
-      </head>
-      <body>
-        <h1>Bruschetta</h1>
-        <ul>
-            <a href="./index.html">Home</a>
-        </ul>
 
-        <h3>Ingredients</h3>
+<head>
+  <meta charset="UTF-8">
+  <title>Bruschetta</title>
+</head>
 
-        <ul>
-            <li>1 loaf French bread, cut into 1/4-inch slices</li>
-            <li>1 tablespoon extra-virgin olive oil</li>
-            <li>8 roma (plum) tomatoes, diced</li>
-            <li>⅓ cup chopped fresh basil</li>
-            <li>1 ounce Parmesan cheese, freshly grated</li>
-            <li>2 cloves garlic, minced</li>
-            <li>1 tablespoon good quality balsamic vinegar</li>
-            <li>2 teaspoons extra-virgin olive oil</li>
-            <li>¼ teaspoon kosher salt</li>
-            <li>¼ teaspoon freshly ground black pepper</li>
-        </ul>
+<body>
+  <h1>Bruschetta</h1>
+  <ul>
+    <a href="../index.html">Home</a>
+  </ul>
+  <img src="../images/bruschetta.jpeg" alt="Bruschetta">
+  <h3>Description</h3>
+  <p>Bruschetta (pronouced brew-SKET-tah) is an Italian appetizer or antipasti that starts with a base of toasted or grilled bread. The bread is then served warm either with a topping spooned over or with a topping on the side so each person can build their own bruschetta. Bruschetta is meant to be served as a hand-held finger food, large enough for one or two bites.
 
-      </body>
+    You can top bruschetta with more than tomatoes, too. For example, try Strawberry Bruschetta and Peach Brulée Burrata Bruschetta for dessert-like versions.</p>
+  <h3>Ingredients</h3>
+
+
+  <ul>
+    <li>1 loaf French bread, cut into 1/4-inch slices</li>
+    <li>1 tablespoon extra-virgin olive oil</li>
+    <li>8 roma (plum) tomatoes, diced</li>
+    <li>⅓ cup chopped fresh basil</li>
+    <li>1 ounce Parmesan cheese, freshly grated</li>
+    <li>2 cloves garlic, minced</li>
+    <li>1 tablespoon good quality balsamic vinegar</li>
+    <li>2 teaspoons extra-virgin olive oil</li>
+    <li>¼ teaspoon kosher salt</li>
+    <li>¼ teaspoon freshly ground black pepper</li>
+  </ul>
+  <h3>Steps</h3>
+  <ol>
+    <li>Preheat oven to 400 degrees F (200 degrees C). Brush bread slices on both sides lightly with 1 tablespoon oil
+      and place on large baking sheet. Toast bread until golden, 5 to 10 minutes, turning halfway through.</li>
+    <li>Meanwhile, toss together tomatoes, basil, Parmesan cheese, and garlic in a bowl. Mix in balsamic vinegar, 2
+      teaspoons olive oil, kosher salt, and pepper.</li>
+    <li>Spoon tomato mixture onto toasted bread slices and serve immediately.</li>
+  </ol>
+
+</body>
+
 </html>
-
-
-
-
-
-
-
-
-
-
