--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Homepage</title>
-      </head>
-      <body>
-        <h1>Odin Recipes</h1>
 
+<head>
+  <meta charset="UTF-8">
+  <title>Homepage</title>
+</head>
 
-      </body>
+<body>
+  <h1>Odin Recipes</h1>
+  <ul>
+    <li><a href="./recipes/bruschetta.html">Bruschetta</a></li>
+    <li><a href="./recipes/tacoquiche.html">Mini Taco Quiches</a></li>
+    <li><a href="./recipes/jalapenopoppers.html">Jalapeno Poppers</a></li>
+  </ul>
+
+</body>
+
 </html>
