--- a/recipes/bruschetta.html
+++ b/recipes/bruschetta.html
@@ -3,23 +3,24 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="../styles.css">
   <title>Bruschetta</title>
 </head>
 
 <body>
-  <h1>Bruschetta</h1>
+  <h1 class="header">Bruschetta</h1>
   <ul>
-    <a href="../index.html">Home</a>
+    <a href="../index.html" class="navbutton">Home</a>
   </ul>
   <img src="../images/bruschetta.jpeg" alt="Bruschetta">
-  <h3>Description</h3>
+  <h3 class="header">Description</h3>
   <p>Bruschetta (pronouced brew-SKET-tah) is an Italian appetizer or antipasti that starts with a base of toasted or grilled bread. The bread is then served warm either with a topping spooned over or with a topping on the side so each person can build their own bruschetta. Bruschetta is meant to be served as a hand-held finger food, large enough for one or two bites.
 
     You can top bruschetta with more than tomatoes, too. For example, try Strawberry Bruschetta and Peach Brulée Burrata Bruschetta for dessert-like versions.</p>
-  <h3>Ingredients</h3>
+  <h3 class="header">Ingredients</h3>
 
 
-  <ul>
+  <ul class="list">
     <li>1 loaf French bread, cut into 1/4-inch slices</li>
     <li>1 tablespoon extra-virgin olive oil</li>
     <li>8 roma (plum) tomatoes, diced</li>
@@ -31,7 +32,7 @@
     <li>¼ teaspoon kosher salt</li>
     <li>¼ teaspoon freshly ground black pepper</li>
   </ul>
-  <h3>Steps</h3>
+  <h3 class="header">Steps</h3>
   <ol>
     <li>Preheat oven to 400 degrees F (200 degrees C). Brush bread slices on both sides lightly with 1 tablespoon oil
       and place on large baking sheet. Toast bread until golden, 5 to 10 minutes, turning halfway through.</li>
