--- a/recipes/jalapenopoppers.html
+++ b/recipes/jalapenopoppers.html
@@ -3,18 +3,19 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../styles.css">
     <title>Bruschetta</title>
 </head>
 
 <body>
-    <h1>Jalapeno Poppers</h1>
+    <h1 class="header">Jalapeno Poppers</h1>
     <ul>
-        <a href="../index.html">Home</a>
+        <a href="../index.html" class="navbutton">Home</a>
     </ul>
     <img src="../images/poppers.jpeg" alt="Jalapeno Poppers">
-    <h3>Description</h3>
+    <h3 class="header">Description</h3>
     <p>This homemade jalapeño poppers recipe was made by taking the best features of three or four other popper recipes and combining them to make something that tastes wonderful. A frequent request at my house, and at others. I usually make 100 and put them in the fridge. They don't last long so increase the recipe as necessary. Adjust the amount of bacon bits and type of shredded cheese to taste. Lots of tests will help you figure out the best way you like your jalapeño poppers.</p>
-    <h3>Ingredients</h3>
+    <h3 class="header">Ingredients</h3>
 
 
     <ul>
@@ -27,7 +28,7 @@
             <li>1 cup dry bread crumbs</li>
             <li>2 quarts oil for frying, or as needed</li>
     </ul>
-    <h3>Steps</h3>
+    <h3 class="header">Steps</h3>
     <ol>
         <li>Mix cream cheese, Cheddar cheese, and bacon bits together in a medium bowl until well combined. Spoon mixture into jalapeño halves.</li>
 
