--- a/recipes/tacoquiche.html
+++ b/recipes/tacoquiche.html
@@ -3,19 +3,20 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../styles.css">
     <title>Bruschetta</title>
 </head>
 
 <body>
-    <h1>Mini Taco Quiches</h1>
+    <h1 class="header">Mini Taco Quiches</h1>
     <ul>
-        <a href="../index.html">Home</a>
+        <a href="../index.html" class="navbutton">Home</a>
     </ul>
     <img src="../images/tacoquiche.jpeg" alt="Mini Taco Quiches">
-    <h3>Description</h3>
+    <h3 class="header">Description</h3>
     <p>These tasty mini taco quiches are a party favorite. The crust is a flour tortilla and the quiches are comprised
         of ground beef, taco seasoning, Cheddar cheese, black olives, and sour cream.</p>
-    <h3>Ingredients</h3>
+    <h3 class="header">Ingredients</h3>
 
 
     <ul>
@@ -32,7 +33,7 @@
         <li>⅓ cup sour cream</li>
         <li>½ cup shredded Cheddar cheese</li>
     </ul>
-    <h3>Steps</h3>
+    <h3 class="header">Steps</h3>
     <ol>
         <li>Preheat the oven to 350 degrees F (175 degrees C). Grease a 12-cup muffin tin with cooking spray.</li>
 
