--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="./styles.css">
   <title>Homepage</title>
 </head>
 
 <body>
-  <h1>Odin Recipes</h1>
+  <h1 id="homepage-title">Odin Recipes</h1>
   <ul>
-    <li><a href="./recipes/bruschetta.html">Bruschetta</a></li>
-    <li><a href="./recipes/tacoquiche.html">Mini Taco Quiches</a></li>
-    <li><a href="./recipes/jalapenopoppers.html">Jalapeno Poppers</a></li>
+    <li><a href="./recipes/bruschetta.html" class="navbutton">Bruschetta</a></li>
+    <li><a href="./recipes/tacoquiche.html" class="navbutton">Mini Taco Quiches</a></li>
+    <li><a href="./recipes/jalapenopoppers.html" class="navbutton">Jalapeno Poppers</a></li>
   </ul>
 
 </body>
